--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,4 +1,4 @@
-[
+{ "projects:"}[
     {
         "name": "Email Clean-Up",
         "milestones": [
@@ -53,4 +53,4 @@
         "description": "tle: 2019Q4 Marketinglayout: full-width---# 2019Q4 Marketing",
         "leaders": []
     }
-]
+]}
