remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -4,12 +4,12 @@
         "milestones": [
             {
                 "milestone_date": "2019-03-08",
-                "description": "Secure agreement with counsel for scope of work",
+                "description": "Secure agreement with counsel for scope of work ",
                 "owner": "Completed March 12"
             },
             {
                 "milestone_date": "2019-03-25",
-                "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations",
+                "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations ",
                 "owner": "Completed"
             },
             {
@@ -19,7 +19,7 @@
             },
             {
                 "milestone_date": "2019-06-07",
-                "description": "Final filing instructions were signed off by ED",
+                "description": "Final filing instructions were signed off by ED ",
                 "owner": "Completed"
             }
         ],
@@ -32,12 +32,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -55,12 +55,12 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-23",
-                "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy",
+                "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy ",
                 "owner": "Mike"
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Spotlight Content Complete and Ready for launch",
+                "description": "Spotlight Content Complete and Ready for launch ",
                 "owner": "Susan"
             },
             {
@@ -75,7 +75,7 @@
             },
             {
                 "milestone_date": "2019-12-20",
-                "description": "Launch End of Year Giving Campaign",
+                "description": "Launch End of Year Giving Campaign ",
                 "owner": "Susan"
             }
         ],
@@ -88,7 +88,7 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-24",
-                "description": "Kickoff call",
+                "description": "Kickoff call ",
                 "owner": "Mike"
             },
             {
@@ -162,7 +162,7 @@
             },
             {
                 "milestone_date": "2019-12-20",
-                "description": "Website Launch",
+                "description": "Website Launch ",
                 "owner": "Harold"
             },
             {
@@ -219,12 +219,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -242,12 +242,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -265,12 +265,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -303,12 +303,12 @@
             },
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -326,12 +326,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -349,12 +349,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -372,12 +372,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -395,12 +395,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -418,12 +418,12 @@
         "milestones": [
             {
                 "milestone_date": "2019-03-08",
-                "description": "Secure agreement with counsel for scope of work",
+                "description": "Secure agreement with counsel for scope of work ",
                 "owner": "Completed March 12"
             },
             {
                 "milestone_date": "2019-03-25",
-                "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations",
+                "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations ",
                 "owner": "Completed"
             },
             {
@@ -433,7 +433,7 @@
             },
             {
                 "milestone_date": "2019-06-07",
-                "description": "Final filing instructions were signed off by ED",
+                "description": "Final filing instructions were signed off by ED ",
                 "owner": "Completed"
             }
         ],
@@ -446,12 +446,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -469,12 +469,12 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-23",
-                "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy",
+                "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy ",
                 "owner": "Mike"
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Spotlight Content Complete and Ready for launch",
+                "description": "Spotlight Content Complete and Ready for launch ",
                 "owner": "Susan"
             },
             {
@@ -489,7 +489,7 @@
             },
             {
                 "milestone_date": "2019-12-20",
-                "description": "Launch End of Year Giving Campaign",
+                "description": "Launch End of Year Giving Campaign ",
                 "owner": "Susan"
             }
         ],
@@ -502,7 +502,7 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-24",
-                "description": "Kickoff call",
+                "description": "Kickoff call ",
                 "owner": "Mike"
             },
             {
@@ -576,7 +576,7 @@
             },
             {
                 "milestone_date": "2019-12-20",
-                "description": "Website Launch",
+                "description": "Website Launch ",
                 "owner": "Harold"
             },
             {
@@ -633,12 +633,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -656,12 +656,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -679,12 +679,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -717,12 +717,12 @@
             },
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -740,12 +740,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -763,12 +763,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -786,12 +786,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
@@ -809,12 +809,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
+                "description": "New Year's Eve Holiday, ",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
+                "description": "Independence Day (US) Holiday, ",
                 "owner": "All"
             }
         ],
