remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -5,12 +5,12 @@
             {
                 "milestone_date": "2019-03-08",
                 "description": "Secure agreement with counsel for scope of work ",
-                "owner": "Completed March 12"
+                "owner": "No Owner"
             },
             {
                 "milestone_date": "2019-03-25",
                 "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations ",
-                "owner": "Completed"
+                "owner": "No Owner"
             },
             {
                 "milestone_date": "2019-04-15",
@@ -20,7 +20,7 @@
             {
                 "milestone_date": "2019-06-07",
                 "description": "Final filing instructions were signed off by ED ",
-                "owner": "Completed"
+                "owner": "No Owner"
             }
         ],
         "description": "Today our institutional name and the events we host are not protected by copyright. The Foundation will endeavor to register the following marks in the United States, European Union, and the United Kingdom: OWASP, Open Web Application Security Project, Global AppSec, and AppSec Days. Additionally the Foundation will register our figure mark (logo) in these same three domiciles. Once completed, the Foundation will develop and share a Trademark Guidelines document for events, chapters, and projects along with implementing these changes on our websites and event names. At this time, the Foundation does not expect to fund any enforcement activities.",
@@ -419,12 +419,12 @@
             {
                 "milestone_date": "2019-03-08",
                 "description": "Secure agreement with counsel for scope of work ",
-                "owner": "Completed March 12"
+                "owner": "No Owner"
             },
             {
                 "milestone_date": "2019-03-25",
                 "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations ",
-                "owner": "Completed"
+                "owner": "No Owner"
             },
             {
                 "milestone_date": "2019-04-15",
@@ -434,7 +434,7 @@
             {
                 "milestone_date": "2019-06-07",
                 "description": "Final filing instructions were signed off by ED ",
-                "owner": "Completed"
+                "owner": "No Owner"
             }
         ],
         "description": "Today our institutional name and the events we host are not protected by copyright. The Foundation will endeavor to register the following marks in the United States, European Union, and the United Kingdom: OWASP, Open Web Application Security Project, Global AppSec, and AppSec Days. Additionally the Foundation will register our figure mark (logo) in these same three domiciles. Once completed, the Foundation will develop and share a Trademark Guidelines document for events, chapters, and projects along with implementing these changes on our websites and event names. At this time, the Foundation does not expect to fund any enforcement activities.",
