remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -14,7 +14,7 @@
             },
             {
                 "milestone_date": "2019-04-15",
-                "description": "Ensure all planned marks have TM usage in this interim perio",
+                "description": "Ensure all planned marks have TM usage in this interim period",
                 "owner": ""
             },
             {
@@ -65,12 +65,12 @@
             },
             {
                 "milestone_date": "2019-12-12",
-                "description": "Retire SalesForce member notification syste",
+                "description": "Retire SalesForce member notification system",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-17",
-                "description": "EXPECTED Website launc",
+                "description": "EXPECTED Website launch",
                 "owner": ""
             },
             {
@@ -93,7 +93,7 @@
             },
             {
                 "milestone_date": "2019-10-28",
-                "description": "Contract signed and project underwayTB",
+                "description": "Contract signed and project underwayTBD",
                 "owner": ""
             }
         ],
@@ -122,42 +122,42 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-10",
-                "description": "Staff Projects migrated and in productio",
+                "description": "Staff Projects migrated and in production",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-10-30",
-                "description": "Events pages migrated and in productio",
+                "description": "Events pages migrated and in production",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-10-30",
-                "description": "Policy pages migrated and ready for Board Approva",
+                "description": "Policy pages migrated and ready for Board Approval",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-11-28",
-                "description": "Corporate pages migrated (not production",
+                "description": "Corporate pages migrated (not production)",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-06",
-                "description": "Chapter pages migrated (not production",
+                "description": "Chapter pages migrated (not production)",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-06",
-                "description": "Project pages migrated (not production",
+                "description": "Project pages migrated (not production)",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Redirect system in place and ready for launc",
+                "description": "Redirect system in place and ready for launch",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Validate in-bound search redirect working on events/policy page",
+                "description": "Validate in-bound search redirect working on events/policy pages",
                 "owner": ""
             },
             {
@@ -167,17 +167,17 @@
             },
             {
                 "milestone_date": "2019-12-18",
-                "description": "Validate Google Analytics instance runnin",
+                "description": "Validate Google Analytics instance running",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-18",
-                "description": "Validate search redirect working site-wid",
+                "description": "Validate search redirect working site-wide",
                 "owner": ""
             },
             {
                 "milestone_date": "2020-01-15",
-                "description": "Validate Meetup Connecto",
+                "description": "Validate Meetup Connector",
                 "owner": ""
             }
         ],
@@ -288,17 +288,17 @@
         "milestones": [
             {
                 "milestone_date": "2019-12-02",
-                "description": "Payment 10% of Rental Fee du",
+                "description": "Payment 10% of Rental Fee due",
                 "owner": ""
             },
             {
                 "milestone_date": "2020-01-06",
-                "description": "Payment 45% of Rental Fee du",
+                "description": "Payment 45% of Rental Fee due",
                 "owner": ""
             },
             {
                 "milestone_date": "2020-05-15",
-                "description": "Payment 45% of Rental Fee du",
+                "description": "Payment 45% of Rental Fee due",
                 "owner": ""
             },
             {
@@ -428,7 +428,7 @@
             },
             {
                 "milestone_date": "2019-04-15",
-                "description": "Ensure all planned marks have TM usage in this interim perio",
+                "description": "Ensure all planned marks have TM usage in this interim period",
                 "owner": ""
             },
             {
@@ -479,12 +479,12 @@
             },
             {
                 "milestone_date": "2019-12-12",
-                "description": "Retire SalesForce member notification syste",
+                "description": "Retire SalesForce member notification system",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-17",
-                "description": "EXPECTED Website launc",
+                "description": "EXPECTED Website launch",
                 "owner": ""
             },
             {
@@ -507,7 +507,7 @@
             },
             {
                 "milestone_date": "2019-10-28",
-                "description": "Contract signed and project underwayTB",
+                "description": "Contract signed and project underwayTBD",
                 "owner": ""
             }
         ],
@@ -536,42 +536,42 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-10",
-                "description": "Staff Projects migrated and in productio",
+                "description": "Staff Projects migrated and in production",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-10-30",
-                "description": "Events pages migrated and in productio",
+                "description": "Events pages migrated and in production",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-10-30",
-                "description": "Policy pages migrated and ready for Board Approva",
+                "description": "Policy pages migrated and ready for Board Approval",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-11-28",
-                "description": "Corporate pages migrated (not production",
+                "description": "Corporate pages migrated (not production)",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-06",
-                "description": "Chapter pages migrated (not production",
+                "description": "Chapter pages migrated (not production)",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-06",
-                "description": "Project pages migrated (not production",
+                "description": "Project pages migrated (not production)",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Redirect system in place and ready for launc",
+                "description": "Redirect system in place and ready for launch",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Validate in-bound search redirect working on events/policy page",
+                "description": "Validate in-bound search redirect working on events/policy pages",
                 "owner": ""
             },
             {
@@ -581,17 +581,17 @@
             },
             {
                 "milestone_date": "2019-12-18",
-                "description": "Validate Google Analytics instance runnin",
+                "description": "Validate Google Analytics instance running",
                 "owner": ""
             },
             {
                 "milestone_date": "2019-12-18",
-                "description": "Validate search redirect working site-wid",
+                "description": "Validate search redirect working site-wide",
                 "owner": ""
             },
             {
                 "milestone_date": "2020-01-15",
-                "description": "Validate Meetup Connecto",
+                "description": "Validate Meetup Connector",
                 "owner": ""
             }
         ],
@@ -702,17 +702,17 @@
         "milestones": [
             {
                 "milestone_date": "2019-12-02",
-                "description": "Payment 10% of Rental Fee du",
+                "description": "Payment 10% of Rental Fee due",
                 "owner": ""
             },
             {
                 "milestone_date": "2020-01-06",
-                "description": "Payment 45% of Rental Fee du",
+                "description": "Payment 45% of Rental Fee due",
                 "owner": ""
             },
             {
                 "milestone_date": "2020-05-15",
-                "description": "Payment 45% of Rental Fee du",
+                "description": "Payment 45% of Rental Fee due",
                 "owner": ""
             },
             {
