remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -182,12 +182,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -217,12 +217,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -264,12 +264,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -287,12 +287,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -500,12 +500,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -535,12 +535,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -582,12 +582,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
@@ -605,12 +605,12 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday,",
+                "description": "New Year's Eve Holiday",
                 "owner": "All"
             },
             {
                 "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday,",
+                "description": "Independence Day (US) Holiday",
                 "owner": "All"
             }
         ],
