--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,32 +1,7 @@
 [
     {
         "name": "OWASP Trademarks",
-        "milestones": [
-            {
-                "milestone_date": "2019-03-08",
-                "description": "Secure agreement with counsel for scope of work",
-                "owner": "No Owner",
-                "project_name": "OWASP Trademarks"
-            },
-            {
-                "milestone_date": "2019-03-25",
-                "description": "Instructions for Counsel sent for OWASP, Open Web Application Security Project, Global AppSec and AppSec Days for US Registrations",
-                "owner": "No Owner",
-                "project_name": "OWASP Trademarks"
-            },
-            {
-                "milestone_date": "2019-04-15",
-                "description": "Ensure all planned marks have TM usage in this interim period",
-                "owner": "No Owner",
-                "project_name": "OWASP Trademarks"
-            },
-            {
-                "milestone_date": "2019-06-07",
-                "description": "Final filing instructions were signed off by ED",
-                "owner": "No Owner",
-                "project_name": "OWASP Trademarks"
-            }
-        ],
+        "milestones": [],
         "description": "Today our institutional name and the events we host are not protected by copyright. The Foundation will endeavor to register the following marks in the United States, European Union, and the United Kingdom: OWASP, Open Web Application Security Project, Global AppSec, and AppSec Days. Additionally the Foundation will register our figure mark (logo) in these same three domiciles. Once completed, the Foundation will develop and share a Trademark Guidelines document for events, chapters, and projects along with implementing these changes on our websites and event names. At this time, the Foundation does not expect to fund any enforcement activities.",
         "leaders": [],
         "url": "https://www2.owasp.org/www-staff/projects/201902-Trademarks"
@@ -35,13 +10,13 @@
         "name": "Email Clean-Up",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Email Clean-Up"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "Email Clean-Up"
@@ -60,43 +35,43 @@
         "name": "2019Q4 Marketing",
         "milestones": [
             {
-                "milestone_date": "2019-10-2",
+                "milestone_date": "2019-10-23",
                 "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy",
                 "owner": "Mike",
                 "project_name": "2019Q4 Marketing"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-13",
                 "description": "Spotlight Content Complete and Ready for launch",
                 "owner": "Susan",
                 "project_name": "2019Q4 Marketing"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-12",
                 "description": "Retire SalesForce member notification system",
                 "owner": "No Owner",
                 "project_name": "2019Q4 Marketing"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-17",
                 "description": "EXPECTED Website launch",
                 "owner": "No Owner",
                 "project_name": "2019Q4 Marketing"
             },
             {
-                "milestone_date": "2019-12-2",
+                "milestone_date": "2019-12-20",
                 "description": "Launch End of Year Giving Campaign",
                 "owner": "Susan",
                 "project_name": "2019Q4 Marketing"
             },
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "2019Q4 Marketing"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "2019Q4 Marketing"
@@ -110,25 +85,25 @@
         "name": "Donation Form",
         "milestones": [
             {
-                "milestone_date": "2019-10-2",
+                "milestone_date": "2019-10-24",
                 "description": "Kickoff call",
                 "owner": "Mike",
                 "project_name": "Donation Form"
             },
             {
-                "milestone_date": "2019-10-2",
+                "milestone_date": "2019-10-28",
                 "description": "Contract signed and project underway",
                 "owner": "No Owner",
                 "project_name": "Donation Form"
             },
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Donation Form"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday, [All]TBD",
                 "owner": "No Owner",
                 "project_name": "Donation Form"
@@ -151,13 +126,13 @@
         "name": "BlackHat London 2019",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "BlackHat London 2019"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "BlackHat London 2019"
@@ -171,73 +146,73 @@
         "name": "Website Re-launch",
         "milestones": [
             {
-                "milestone_date": "2019-10-1",
+                "milestone_date": "2019-10-10",
                 "description": "Staff Projects migrated and in production",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-10-3",
+                "milestone_date": "2019-10-30",
                 "description": "Events pages migrated and in production",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-10-3",
+                "milestone_date": "2019-10-30",
                 "description": "Policy pages migrated and ready for Board Approval",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-11-2",
+                "milestone_date": "2019-11-28",
                 "description": "Corporate pages migrated (not production)",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-0",
+                "milestone_date": "2019-12-06",
                 "description": "Chapter pages migrated (not production)",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-0",
+                "milestone_date": "2019-12-06",
                 "description": "Project pages migrated (not production)",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-13",
                 "description": "Redirect system in place and ready for launch",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-13",
                 "description": "Validate in-bound search redirect working on events/policy pages",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-2",
+                "milestone_date": "2019-12-20",
                 "description": "Website Launch",
                 "owner": "Harold",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-18",
                 "description": "Validate Google Analytics instance running",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2019-12-1",
+                "milestone_date": "2019-12-18",
                 "description": "Validate search redirect working site-wide",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
             },
             {
-                "milestone_date": "2020-01-1",
+                "milestone_date": "2020-01-15",
                 "description": "Validate Meetup Connector",
                 "owner": "No Owner",
                 "project_name": "Website Re-launch"
@@ -260,13 +235,13 @@
         "name": "Events Form",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Events Form"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday, [All]TBD",
                 "owner": "No Owner",
                 "project_name": "Events Form"
@@ -293,13 +268,13 @@
         "name": "AppSec California 2020",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "AppSec California 2020"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "AppSec California 2020"
@@ -318,13 +293,13 @@
         "name": "ProjectS Summit - Winter 2020",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "ProjectS Summit - Winter 2020"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "ProjectS Summit - Winter 2020"
@@ -343,13 +318,13 @@
         "name": "BlackHat Asia",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Asia"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Asia"
@@ -368,37 +343,37 @@
         "name": "Global AppSec - Dublin",
         "milestones": [
             {
-                "milestone_date": "2019-10-3",
+                "milestone_date": "2019-10-31",
                 "description": "Stub website with Sponsor pricing/info online.",
                 "owner": "Harold",
                 "project_name": "Global AppSec - Dublin"
             },
             {
-                "milestone_date": "2019-12-0",
+                "milestone_date": "2019-12-02",
                 "description": "Payment 10% of Rental Fee due",
                 "owner": "No Owner",
                 "project_name": "Global AppSec - Dublin"
             },
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-06",
                 "description": "Payment 45% of Rental Fee due",
                 "owner": "No Owner",
                 "project_name": "Global AppSec - Dublin"
             },
             {
-                "milestone_date": "2020-05-1",
+                "milestone_date": "2020-05-15",
                 "description": "Payment 45% of Rental Fee due",
                 "owner": "No Owner",
                 "project_name": "Global AppSec - Dublin"
             },
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Global AppSec - Dublin"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "Global AppSec - Dublin"
@@ -417,13 +392,13 @@
         "name": "Projects Summit Summer",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Projects Summit Summer"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "Projects Summit Summer"
@@ -442,13 +417,13 @@
         "name": "BlackHat Las Vegas",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Las Vegas"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Las Vegas"
@@ -467,13 +442,13 @@
         "name": "DEFCON 28",
         "milestones": [
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "DEFCON 28"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "DEFCON 28"
@@ -492,25 +467,25 @@
         "name": "Global AppSec - San Francisco",
         "milestones": [
             {
-                "milestone_date": "2019-10-0",
+                "milestone_date": "2019-10-01",
                 "description": "Sign contract for venue",
                 "owner": "Mike",
                 "project_name": "Global AppSec - San Francisco"
             },
             {
-                "milestone_date": "2019-10-3",
+                "milestone_date": "2019-10-31",
                 "description": "Stub website with Sponsor pricing/info online.",
                 "owner": "Harold",
                 "project_name": "Global AppSec - San Francisco"
             },
             {
-                "milestone_date": "2020-01-0",
+                "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "Global AppSec - San Francisco"
             },
             {
-                "milestone_date": "2020-07-0",
+                "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
                 "project_name": "Global AppSec - San Francisco"
