--- a/_data/projects.json
+++ b/_data/projects.json
@@ -11,8 +11,8 @@
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
-                "owner": "All",
+                "description": "New Year's Eve Holiday, [All]-",
+                "owner": "No Owner",
                 "project_name": "Email Clean-Up"
             },
             {
@@ -36,25 +36,25 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-23",
-                "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy",
-                "owner": "Mike",
+                "description": "Connect Rebecca and Susan with Project and Chapter leaders for copy [Mike]-",
+                "owner": "No Owner",
                 "project_name": "2019Q4 Marketing"
             },
             {
                 "milestone_date": "2019-12-13",
-                "description": "Spotlight Content Complete and Ready for launch",
-                "owner": "Susan",
+                "description": "Spotlight Content Complete and Ready for launch [Susan]-",
+                "owner": "No Owner",
                 "project_name": "2019Q4 Marketing"
             },
             {
                 "milestone_date": "2019-12-12",
-                "description": "Retire SalesForce member notification system",
+                "description": "Retire SalesForce member notification system [Harold]-",
                 "owner": "No Owner",
                 "project_name": "2019Q4 Marketing"
             },
             {
                 "milestone_date": "2019-12-17",
-                "description": "EXPECTED Website launch",
+                "description": "EXPECTED Website launch [Harold]-",
                 "owner": "No Owner",
                 "project_name": "2019Q4 Marketing"
             },
@@ -62,18 +62,6 @@
                 "milestone_date": "2019-12-20",
                 "description": "Launch End of Year Giving Campaign",
                 "owner": "Susan",
-                "project_name": "2019Q4 Marketing"
-            },
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
-                "owner": "All",
-                "project_name": "2019Q4 Marketing"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
-                "owner": "All",
                 "project_name": "2019Q4 Marketing"
             }
         ],
@@ -120,6 +108,18 @@
         "name": "BlackHat London 2019",
         "milestones": [
             {
+                "milestone_date": "2019-11-15",
+                "description": "egister volunteers and schedule",
+                "owner": "Lisa",
+                "project_name": "BlackHat London 2019"
+            },
+            {
+                "milestone_date": "2019-11-18",
+                "description": "inalize SWAG and handouts with Mike and order",
+                "owner": "Mike & Lisa",
+                "project_name": "BlackHat London 2019"
+            },
+            {
                 "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
@@ -132,7 +132,7 @@
                 "project_name": "BlackHat London 2019"
             }
         ],
-        "description": "* [Conference call minutes from 10/9/2019](https://drive.google.com/open?id=1KukrG-jbV3PErZrK4WfUzwOORa7quZ05nefgM3i_-dM)* [BlackHat London 2019 website](https://www.blackhat.com/eu-19/)* December 2-5, 2019  Briefing on Dec 4 & 5  * Briefing & Business Hall Hours:  Wednesday, December 4, 10:30 AM - 7:00 PM | Business Hall Reception, 5:30 PM - 7:00 PM  * Thursday, December 5: 10:00 AM - 4:00 PM",
+        "description": "* [Conference call minutes from 10/9/2019](https://drive.google.com/open?id=1KukrG-jbV3PErZrK4WfUzwOORa7quZ05nefgM3i_-dM)* [BlackHat London 2019 website](https://www.blackhat.com/eu-19/)* December 2-5, 2019  Briefing on Dec 4 & 5  * Briefing & Business Hall Hours:  * Wednesday, December 4, 10:30 AM - 7:00 PM | Business Hall Reception, 5:30 PM - 7:00 PM  * Thursday, December 5: 10:00 AM - 4:00 PM* Wednesday, December 4 - 3:25 PM - 4:15 PM WIA Community Session \"Share insights they have gained at different stages of their careers   that could help other women grow their our own careers and maximize the contribution of women in the field.\" * Wednesday, December 4 - 4:30 PM - 5:30 PM Women in Security Mixer",
         "leaders": [],
         "url": "https://www2.owasp.org/www-staff/projects/201912-Blackhat-London"
     },
@@ -256,13 +256,13 @@
         "name": "AppSec California 2020",
         "milestones": [
             {
-                "milestone_date": "2020-11-15",
+                "milestone_date": "2019-11-15",
                 "description": "Secure insurance for event per terms of contract (See below)",
                 "owner": "Dawn",
                 "project_name": "AppSec California 2020"
             },
             {
-                "milestone_date": "2020-12-20",
+                "milestone_date": "2019-12-20",
                 "description": "Final payment of $22,750 is due. Ticket # OSD-3068",
                 "owner": "Dawn",
                 "project_name": "AppSec California 2020"
@@ -276,6 +276,85 @@
             }
         ],
         "url": "https://www2.owasp.org/www-staff/projects/2020-event-appsec-california"
+    },
+    {
+        "name": "OWASP Staff Holidays",
+        "milestones": [
+            {
+                "milestone_date": "2020-01-01",
+                "description": "New Year\u2019s Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-02-17",
+                "description": "Presidents Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-05-25",
+                "description": "Memorial Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-07-03",
+                "description": "Independence Day (Observed)-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-09-07",
+                "description": "Labor Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-11-03",
+                "description": "Federal Election Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-11-26",
+                "description": "Thanksgiving Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-11-27",
+                "description": "Day after Thanksgiving-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-12-24",
+                "description": "Christmas Eve-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-12-25",
+                "description": "Christmas Day-",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            },
+            {
+                "milestone_date": "2020-12-31",
+                "description": "New Year\u2019s Eve",
+                "owner": "No Owner",
+                "project_name": "OWASP Staff Holidays"
+            }
+        ],
+        "description": "tle: OWASP Staff Holidayslayout: full-width---# OWASP Staff U.S. Holidays- [ ] 2020-01-01, New Year\u2019s Day- [ ] 2020-02-17, Presidents Day- [ ] 2020-05-25, Memorial Day- [ ] 2020-07-03, Independence Day (Observed)- [ ] 2020-09-07, Labor Day- [ ] 2020-11-03, Federal Election Day- [ ] 2020-11-26, Thanksgiving Day- [ ] 2020-11-27, Day after Thanksgiving- [ ] 2020-12-24, Christmas Eve- [ ] 2020-12-25, Christmas Day- [ ] 2020-12-31, New Year\u2019s Eve",
+        "leaders": [
+            {
+                "name": " ",
+                "email": ""
+            }
+        ],
+        "url": "https://www2.owasp.org/www-staff/projects/2020-staff-holidays"
     },
     {
         "name": "ProjectS Summit - Winter 2020",
@@ -332,38 +411,38 @@
         "milestones": [
             {
                 "milestone_date": "2019-10-31",
-                "description": "Stub website with Sponsor pricing/info online.",
-                "owner": "Harold",
+                "description": "Stub website with Sponsor pricing/info online. [Harold]-",
+                "owner": "No Owner",
+                "project_name": "Global AppSec - Dublin"
+            },
+            {
+                "milestone_date": "2019-11-04",
+                "description": "Launch Call for Program Team Members, [Emily]-",
+                "owner": "No Owner",
+                "project_name": "Global AppSec - Dublin"
+            },
+            {
+                "milestone_date": "2019-12-01",
+                "description": "Close Call for Program Team Members, [Emily]-",
+                "owner": "No Owner",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2019-12-02",
-                "description": "Payment 10% of Rental Fee due",
+                "description": "Payment 10% of Rental Fee due, [Emily]-",
                 "owner": "No Owner",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2020-01-06",
-                "description": "Payment 45% of Rental Fee due",
+                "description": "Payment 45% of Rental Fee due, [Emily]-",
                 "owner": "No Owner",
                 "project_name": "Global AppSec - Dublin"
             },
             {
                 "milestone_date": "2020-05-15",
                 "description": "Payment 45% of Rental Fee due",
-                "owner": "No Owner",
-                "project_name": "Global AppSec - Dublin"
-            },
-            {
-                "milestone_date": "2020-01-01",
-                "description": "New Year's Eve Holiday",
-                "owner": "All",
-                "project_name": "Global AppSec - Dublin"
-            },
-            {
-                "milestone_date": "2020-07-04",
-                "description": "Independence Day (US) Holiday",
-                "owner": "All",
+                "owner": "Emily",
                 "project_name": "Global AppSec - Dublin"
             }
         ],
